--- a/Angular/eBarter/src/index.html
+++ b/Angular/eBarter/src/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Ubuntu">
   <meta charset="utf-8">
   <title>EBarter</title>
   <base href="/">
@@ -12,3 +13,4 @@
   <app-root></app-root>
 </body>
 </html>
+
